# Smuggler

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py  targets.txt  todo.md
.github/workflows/: autobounty.yml  ci.yml
config/: __init__.py  manager.py
gui/: __init__.py  auth_window.py
http-smuggler/: .gitignore
payloads/: __init__.py  database.py
reports/: __init__.py  generators.py
scanner/: __init__.py  core.py  detectors.py
smuggler/: __init__.py  __main__.py  cli.py
smuggler/config/: manager.py
smuggler/gui/: auth_app.py
smuggler/gui/static/: style.css
smuggler/gui/templates/: auth.html
smuggler/payloads/: database.py
smuggler/reports/: generators.py  markdown_generator.py
smuggler/scanner/: core.py  custom_payloads.py  detectors.py  http_utils.py  rate_limiter.py
utils/: __init__.py  http.py
